Implemented map from file

--- a/Text-Based RPG/Text-Based RPG.csproj
+++ b/Text-Based RPG/Text-Based RPG.csproj
@@ -55,7 +55,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Map.txt" />
+    <Content Include="Map.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
