--- a/Text-Based RPG/Text-Based RPG.csproj
+++ b/Text-Based RPG/Text-Based RPG.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Enemy.cs" />
     <Compile Include="GameCharacter.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="GameManager.cs" />
     <Compile Include="Map.cs" />
